# neon_alpha

./: .env.example  .gitignore  MANUAL_BEGINNER_KR.md  README.md  alpaca_paper_trading.py  backtest_alpha158.py  backtest_comparison.py  backtest_de_full.py  backtest_ensemble.py  backtest_ml_signals.py  backtest_sp100.py  download_full_prices.py  download_qlib_data.py  download_sp500.py  pyproject.toml  run.sh  setup.sh  train_alpha158.py  train_double_ensemble.py  train_ensemble.py  train_lambdarank.py  train_qlib_model.py  train_simple_model.py  train_sp500_model.py
data/: sample_prices.csv  sample_signals.csv
docs/: DOCS_INDEX_KR.md  LEAN_EXECUTION_GUIDE_KR.md  MANUAL_BEGINNER_KR.md  QLIB_RESEARCH_GUIDE_KR.md  REAL_TRADING_GUIDE_KR.md
execution/lean/: HybridQlibLeanAlgorithm.py
src/neon_alpha/: __init__.py  cli.py  event_bus.py  generator.py  paper.py  risk.py  signal_io.py
tests/: test_risk_paper.py  test_signal_io.py
